<resources>
    <string name="app_name">Appdesdecero</string>
    <string name="serrania_chiribiquete">Serranía Chiribiquete</string>
    <string name="subtitulo">Una aventura digna de vivir!</string>
    <string name="ubicación">¿CÓMO LLEGAR?</string>
    <string name="subtitulo1">UNA AVENTURA DIGNA DE VIVIR</string>
    <string name="linea">El Parque Nacional Natural Sierra de Chiribiquete se encuentra ubicado en la región amazónica colombiana, en los departamentos de Caquetá y Guaviare</string>
    <string name="texto">Parque Nacional Natural Serranía de Chiribiquete</string>
    <string name="introcuccion">El Parque Nacional de Chiribiquete destaca no solo por su impresionante extensión de casi 3 millones de hectáreas, sino también por su rica biodiversidad. El parque posee la fauna representativa en el área amazónica, tales como el jaguar, el tapir y el águila arpía, entre otros. En cuanto a la vegetación, se puede agrupar en diferentes biomas que se encuentran dentro del parque como las áreas de sabana, bosques inundables, bosques de tierra firme y bosques de tepuy.  El Parque Nacional Natural Chiribiquete se estableció el 21 de septiembre de 1989. El parque se amplió de los 13.000 km2 anteriores  a 28.000 km2  el 21 de agosto de 2013. El presidente colombiano, Juan Manuel Santos, anunció que el Parque Nacional Chiribiquete se ampliaría en 15.000 km2 el 21 de febrero de 2018. El parque se amplió a 43.000 km2 y fue declarado Patrimonio de la Humanidad por la UNESCO el 2 de julio de 2018.</string>
    <string name="aventiras" />
    <string name="aventuras">Aventuras</string>
    <string name="titulo_aventura_list">Rafting</string>
    <string name="imagen_descripcion">icono de aventura</string>
    <string name="name_aventura_list">Rafting</string>
    <string name="descripcion_aventura_list">Decripcion</string>
    <string name="Calificacion_aventura_list">Calificacion</string>
    <string name="depoit_title_string">Rafting</string>
    <string name="depoit_body_descrption_string">El descenso de ríos o balsismo, conocido mundialmente como rafting, es una actividad deportiva y recreativa que consiste en recorrer el río en la dirección de la corriente (río abajo), por lo general sobre algún tipo de embarcación.</string>
    <string name="detpoi_label_description_string">"Descripción: "</string>
    <string name="detpoi_label_rating_string">Calificación</string>
    <string name="detpoi_body_rating_string" >4.5</string>
    <string name="description_detalle_portada">Imagen portada</string>
    <string name="description_detpoi_imageView" />
</resources>